<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImplicitIntent"
    android:orientation="vertical"
    android:gravity="center">
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"/>
    <Button
        android:id="@+id/btnFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_file"/>
    <Button
        android:id="@+id/btnBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_browser"/>

</LinearLayout>